level hız sistemi düzenlendi,oyun durdurulunca butonların çalışması düzeltildi,

--- a/Assets/Plugins/Android/GoogleMobileAdsPlugin/AndroidManifest.xml
+++ b/Assets/Plugins/Android/GoogleMobileAdsPlugin/AndroidManifest.xml
@@ -3,5 +3,6 @@
   <application>
     <uses-library android:required="false" android:name="org.apache.http.legacy" />
     <meta-data android:name="com.google.android.gms.ads.APPLICATION_ID" android:value="ca-app-pub-6488202776624573~9857903798" />
+    <meta-data android:name="com.google.android.gms.ads.DELAY_APP_MEASUREMENT_INIT" android:value="true" />
   </application>
 </manifest>
